<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>jp.reflexworks</groupId>
  <artifactId>reflexcore</artifactId>
  <packaging>jar</packaging>
  <version>8.2.3</version>

  <description>Reflex Core</description>
  <name>Reflex Core</name>

  <organization>
    <name>Virtual Technology</name>
    <url>http://www.virtual-tech.net/</url>
  </organization>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <name>Maven Repository Switchboard</name>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.msgpack</groupId>
      <artifactId>msgpack</artifactId>
      <version>0.6.12</version>
      <exclusions>
        <exclusion>
          <groupId>org.javassist</groupId>
          <artifactId>javassist</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    
    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>3.30.2-GA</version>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.18.0</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.18.0</version>
    </dependency>
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>jakarta.mail</artifactId>
      <version>2.0.1</version>
    </dependency>
    <!--
	<dependency>
	  <groupId>jakarta.mail</groupId>
	  <artifactId>jakarta.mail-api</artifactId>
	  <version>2.1.3</version>
	</dependency>
	<dependency>
	  <groupId>org.eclipse.angus</groupId>
	  <artifactId>angus-mail</artifactId>
	  <version>2.0.3</version>
	  <scope>runtime</scope>
	</dependency>
	<dependency>
	  <groupId>org.eclipse.angus</groupId>
	  <artifactId>gimap</artifactId>
	  <version>2.0.3</version>
	  <scope>runtime</scope>
	</dependency>
	<dependency>
	  <groupId>org.eclipse.angus</groupId>
	  <artifactId>dsn</artifactId>
	  <version>2.0.3</version>
	  <scope>runtime</scope>
	</dependency>
    -->

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <!-- 
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.10.0</version>
        <scope>test</scope>
    </dependency>
    -->

  </dependencies>

</project>
